--- a/projeto-pagina-de-receita/style.css
+++ b/projeto-pagina-de-receita/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: "Alice", serif;
   line-height: 150%;
@@ -24,6 +29,18 @@ img {
   max-width: 100%
 }
 
+main {
+  padding: 24px;
+}
+
+section + section {
+  margin-top: 12px;
+}
+
+#about p + p{
+  margin-top: 12px;
+}
+
 h1 {
   line-height: 140%;
   font-size: 40px;
@@ -35,4 +52,10 @@ h2 {
 
 h1, h2 {
   color: rgb(7, 70, 16);
+  margin-bottom: 4px;
+  line-height: 150%;
+}
+
+ul {
+  padding-left: 24px;
 }
