--- a/projeto-pagina-de-receita/style.css
+++ b/projeto-pagina-de-receita/style.css
@@ -21,7 +21,7 @@ body {
   padding: 24px;
   background-color: rgb(191, 241, 191);
   border-radius: 24px;
-  margin:  48px auto;
+  margin:  48px auto 28px;
 }
 
 img {
@@ -58,4 +58,15 @@ h1, h2 {
 
 ul {
   padding-left: 24px;
+}
+
+footer {
+  color: aliceblue;
+  text-align: center;
+  padding-bottom: 48px;
+}
+
+footer img {
+  vertical-align: middle;
+  background-color: aliceblue;
 }
